python/testData/highlighting/fStringTerminatedByLineBreakInStringLiteralBefore312.py
s = f'{<error descr="Python version 3.11 does not allow new lines in expression parts of non-triple-quoted f-strings">"""
"""</error>}'